# capyfin

./: .dockerignore  .gitignore  Dockerfile  Makefile  compose.yml  pyproject.toml  readme.md
nginx/: nginx.conf
src/config/: urls.py
src/config/settings/: __init__.py  base.py  db.py  drf.py  env.py
src/core/: apps.py  signals.py
src/core/daos/: user_dao.py
src/core/migrations/: 0001_initial.py
src/core/models/: __init__.py  user_details.py
src/core/utils/: __init__.py  time_utils.py
src/dashboard/: mixins.py  urls.py
src/dashboard/services/: __init__.py  get_dashboard_context_data_service.py
src/dashboard/views/: __init__.py  base.py  dashboard.py
src/finance/: apps.py  const.py
src/finance/daos/: __init__.py  coin_dao.py  currency_converter_dao.py  exchange_coin_rate_dao.py  fetch_coins_rates_dao.py  fetch_exchange_rates_dao.py
src/finance/migrations/: 0001_initial.py
src/finance/models/: __init__.py  coin.py  currency.py  exchange_coin_rate.py  exchange_currency_rate.py  user_tracked_coin.py
src/finance/sdks/: exceptions.py
src/finance/services/: __init__.py  fetch_coins_rates_service.py  fetch_exchange_rates_service.py
src/templates/: base.html
src/templates/auth/: login.html
src/templates/component/: footer.html  navbar.html
src/templates/dashboard/: index.html  top_level_chart.html  transactions.html
src/transaction/: const.py  urls.py
src/transaction/daos/: __init__.py  transaction_dao.py
src/transaction/forms/: __init__.py  transaction.py
src/transaction/migrations/: 0001_initial.py
(+20 files in other folders)
